[metadata]
name = sqlacrossover
author = Andrew Grigorev
author-email = andrew@ei-grad.ru
summary = SQLAlchemy-based cross-database migration tool
description-file = README.rst
description-content-type = text/x-rst
home-page = https://pypi.org/project/sqlacrossover/
project_urls =
    Bug Tracker = https://github.com/ei-grad/sqlacrossover/issues
    Documentation = https://github.com/ei-grad/sqlacrossover
    Source Code =  https://github.com/ei-grad/sqlacrossover
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Database
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    sqlalchemy
    database migration
    data migration

[files]
modules =
    sqlacrossover

[bdist_wheel]
universal=1

[extras]
PostgreSQL =
    psycopg2
MySQL =
    pymysql

[entry_points]
console_scripts =
    sqlacrossover = sqlacrossover:main
